2005-04-06 16:16  patthoyts

	* Makefile.vc, jim.c: Add the executable file location into
	  jim_libpath for finding packages.

2005-04-06 15:08  patthoyts

	* jim-win32.c: Fix a problem with usie of mingw gcc and remove some
	  gcc warnings.

2005-04-06 14:52  patthoyts

	* jim-win32.c: Use __stdcall for mingw

2005-04-06 12:14  patthoyts

	* jim.c, jim.h: Shhhhh. Silenced a number of warnings when using
	  MSVC.

2005-04-06 12:13  patthoyts

	* Makefile.vc, jim-win32.c: Made GetPerformanceInfo dynamically
	  available at runtime only if the relevant library can be loaded.
	  Fixed for impoverished compilers.

2005-04-06 08:35  antirez

	* ChangeLog, jim.c, jim.h: Generic API implementing the Stack data
	  structure exported to extensions.

2005-04-05 19:59  antirez

	* ChangeLog, jim-win32.c: Disabled from jim-win32.c commands that
	  need include <psapi.h> because this is not generally available.

2005-04-05 14:18  antirez

	* ChangeLog, jim.c, test.tcl: [scope] command removed. Will be
	  added later with the [let] name and a bit different semantic.

2005-04-05 14:16  antirez

	* ChangeLog, jim-rlprompt-1.0.tcl: minor rlprompt fix.

2005-04-05 13:51  antirez

	* ChangeLog, Makefile, jim-readline.c, jim-rlprompt-1.0.tcl, jim.c,
	  jim.h, jimsh.c: .jimrc support (or jimrc.tcl). Minimal readline
	  extension, just enough to allow to the pure-Jim rlprompt
	  extension to provide a readline-aware interactive shell with
	  history.

2005-04-04 21:44  antirez

	* ChangeLog, README, jim.c: Fixed a memory leak introduced some day
	  ago.	Thanks to 'valgrind'.

2005-04-04 13:59  antirez

	* ChangeLog, jim-stdlib-1.0.tcl: [memoize] is now inside the Jim
	  Standard Library! More info here: http://wiki.tcl.tk/10981 Our
	  version uses a static var to take state instead of a global var,
	  for the rest it is the same.

2005-04-04 10:01  antirez

	* ChangeLog, jim.h: Version marked as "0.51".

2005-04-04 09:58  antirez
